# nlnomy

./: .gitignore  Makefile  README.md  app.py  docker-compose.yaml  pyproject.toml  requirements.txt  streamlit_app.py
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: black.yml
app/: Dockerfile  pyproject.toml
app/src/: preprocessing.py
data/models/: model.pkl  retrained_model.pkl
src/: train.py
src/utils/: __init__.py  feature.py  io.py
