[tool.poetry]
name = "nlnomy"
version = "0.1.0"
description = ""
authors = ["konumaru <konumaru1022@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
streamlit = "^1.27.2"
pandas = "^2.1.1"
numpy = "^1.26.0"
scikit-learn = "^1.3.1"
transformers = "^4.34.0"
torch = {version = "^2.1.0+cpu", source = "pytorch"}
sentencepiece = "^0.1.99"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"
mypy = "^1.5.1"
pyproject-flake8 = "^6.1.0"



[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
