[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["konumaru <konumaru1022@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
streamlit = "^1.27.2"
pandas = "^2.1.1"
numpy = "^1.26.0"
scikit-learn = "^1.3.1"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"
mypy = "^1.5.1"
pyproject-flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
